--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,12 +1,22 @@
 <%= form_for(@song) do |f| %>
-  <label>Song Name:</label><br>
-  <%= f.text_field :name %><br>
+  <label>Song Title:</label><br>
+  <%= f.text_field :title %><br>
+
+  <label>Released:</label><br>
+  <%= f.text_field :released %><br>
+
+  <% if @song.release_year %>
+    <label>Release Year:</label><br>
+    <%= f.text_field :release_year %><br>
+  <% end %>
+  <label>Song Artist:</label><br>
+  <%= f.text_field :artist_name %><br>
 
   <label>Song Artist:</label><br>
-  <%= f.text_field :artist_id %><br>
+  <%= f.text_field :artist_name %><br>
 
   <label>Song Genre:</label><br>
-  <%= f.text_field :genre_id %><br>
+  <%= f.text_field :genre %><br>
 
   <%= f.submit %>
 <% end %>
