--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,6 +2,14 @@
   <label>Song Name:</label><br>
   <%= f.text_field :name %><br>
 
+  <label>Released:</label><br>
+  <%= f.text_field :released %><br>
+
+  <% if @song.release_year %>
+    <label>Release Year:</label><br>
+    <%= f.text_field :release_year %><br>
+  <% end %>
+  
   <label>Song Artist:</label><br>
   <%= f.text_field :artist_id %><br>
 
