automatically backed up by learn

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,8 +2,8 @@
 <p><%= @song.artist %></p>
 <p><%= @song.released %></p>
 
-<% if @song.genre %>
-<p><%= @song.genre.name %></p>
+<% if @song.release_year %>
+<p><%= @song.release_year %></p>
 <% end %>
 
 <% if @song.genre %>
