automatically backed up by learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,7 @@
   <label>Released:</label><br>
   <%= f.text_field :released %><br>
 
-  <% if @song.release_year %>
+  <% if @song.released %>
     <label>Release Year:</label><br>
     <%= f.text_field :release_year %><br>
   <% end %>
