--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,13 @@
 <% @songs.each do |song| %>
 	<p><%= song.name %></p>
+  <p><%= song.artist %></p>
+  <p><%= song.released %></p>
+
+  <% if song.release_year %>
+  <p><%= song.release_year %></p>
+  <% end %>
+
+  <% if song.genre %>
+  <p><%= song.genre %></p>
+  <% end %>
 <% end %>
